# ProducaoAPS

./: .gitignore  Documento.md  Readme.md  load_db.py  load_db_PG.py  load_db_SQLite.py  main.py  pyproject.toml  requirements.txt
app/: main.py
app/components/: cards.py  charts.py  tables.py
app/services/: queries.py
app/utils/: cache.py
data/: procedimentos.xlsx
data/parquet/: exames_fortaleza.parquet  procedimentos.parquet
scripts/: convert_xlsx_to_parquet.py  ibge.py  main.py  main2.py  test_connection.py
src/database/: connection.py  load.py  models.py
src/database1/: load.py
src/ingestion/: ibge.py
src/pipeline/: pipeline.py
src/transformation/: dim_calendario.py  dim_municipio.py  dim_procedimentos.py  fato.py
src/utils/: helpers.py
tests/: test_fato_integridade.py
