[project]
name = "02producaoaps"
version = "0.1.0"
description = ""
authors = [
    {name = "Abel Brasil",email = "abelbrasil88@gmail.com"}
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]
