[project]
name = "02producaoaps"
version = "0.1.0"
description = ""
authors = [
    {name = "Abel Brasil",email = "abelbrasil88@gmail.com"}
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "pyarrow (>=23.0.1,<24.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "streamlit (>=1.56.0,<2.0.0)",
    "plotly (>=6.7.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]